fixed shipping method button alignment and text

--- a/src/App.css
+++ b/src/App.css
@@ -547,10 +547,6 @@
 height: 10px;
 }
 
-.radio-button-div{
-  margin:1em;
-}
-
 .white-text{
   color: white;
 }
